# MLV-App

./: .gitignore  ClipInformation.h  MainWindow.cpp  README.html  README.md  RenameDialog.h  index.html
.github/workflows/: Linux.yml  Windows.yml  macOS-ARM.yml  macOS-Arm64.yml  macOS-Intel.yml
cocoa/: Makefile  README.md  background_thread.h  compile_time_code.c  main.m  main_methods.m
cocoa/gui_stuff/: anchor_methods.h  app_design.h  style_config.h  useful_methods.m
osx_installer/: BuildInstaller.sh  BuildInstallerGithubAction.sh  Readme.txt
pixel_maps/: 80000301_1808x1190.fpm  80000301_1808x3508.fpm  80000301_4072x1731.fpm  80000326_1736x2181.fpm  80000326_1808x3508.fpm  80000326_1872x1060.fpm  80000326_2592x1100.fpm  80000326_2592x1447.fpm  80000326_4104x2588.fpm  80000331_1512x1864.fpm  80000331_1808x2242.fpm  80000331_1808x726.fpm  80000331_1808x897.fpm  80000331_1872x1059.fpm  80000331_1872x1060.fpm  80000331_1872x1110.fpm  80000331_1872x1190.fpm  80000331_2872x1199.fpm  80000331_2952x1254.fpm  80000331_3144x1313.fpm  80000331_5040x2831.fpm  80000346_4072x779.fpm  80000346_4128x2582.fpm  80000346_5080x738.fpm  80000355_1808x1188.fpm  80000355_1872x1187.fpm  80000355_1872x1906.fpm  80000355_1872x1946.fpm  80000355_2592x1447.fpm  80000355_3072x1460.fpm
platform/MLVApp/: InfoDialog.cpp  InfoDialog.h  InfoDialog.ui  MLVApp.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui
platform/binning_test/: Makefile  README.md  main.c
platform/cocoa/: Makefile  background_thread.m  compile_time_code.c  compile_time_code.m  delegate.h  delegate.m  generate_info_plist.c  godobject.h  mac_info.h  main.m  main_methods.h  main_methods.m  mlv_view.h  mlv_view.m  preferences_window.h  preferences_window.m  session_methods.h  session_methods.m
platform/mlv_blender/: MLVBlender.c  MLVBlender.h  MLVBlenderGUI.h  MLVBlenderParameterView.cpp  MLVBlenderParameterView.h  MLVBlender_structs.h  build.sh  main.cpp
platform/qt/: AudioPlayback.cpp  AudioPlayback.h  AudioWave.cpp  AudioWave.h  AvfLibWrapper.h  BadPixelFileHandler.cpp  BadPixelFileHandler.h  ClipInformation.cpp  ClipInformation.h  (+141 more)
processing/: image_profile.h  processing.c  raw_processing.c  raw_processing.h
receipts/: CanonLog.marxml  FastAlexaRCD.marxml  FastProxy.marxml  FastProxyRCD.marxml  WarmGlow.marxml  bluetonewedding.marxml
src/: mlv_include.h
src/librtprocess/: CMakeLists.txt  CompilerChecks.cmake  DefineOptions.cmake  LICENSE.txt  README.md
src/librtprocess/pkgconfig/: rtprocess.pc.cmake
src/librtprocess/src/: CMakeLists.txt
src/librtprocess/src/demosaic/: ahd.cc  amaze.cc  dcb.cc  igv.cc  lmmse.cc  markesteijn.cc  rcd.cc
src/librtprocess/src/include/: LUT.h  StopWatch.h  helpersse2.h  librtprocess.h  librtprocesswrapper.cpp  librtprocesswrapper.h  opthelper.h  sleef.h  sleefsseavx.h
src/librtprocess/src/postprocess/: hilite_recon.cc
tests/: test_invariant_main.cpp
(+408 files in other folders)
